# N64-Real-Time-Analysis-Tool

./: .gitignore  AGENTS.md  README.md  build_analysis_tool.sh  run_sky96.sh
analysis_tool/: CMakeLists.txt  README.md
analysis_tool/include/: analysis_window.h
analysis_tool/src/: AnalysisWindow.cpp
analysis_tool/tests/: dummy_test.cpp
sky96/: m64p_install.sh  m64p_test.sh
sky96/source/mupen64plus-core/src/device/r4300/: r4300_core.c
sky96/source/mupen64plus-core/src/main/: main.c
sky96/source/mupen64plus-ui-console/data/: sky96.desktop
sky96/source/mupen64plus-ui-console/doc/: sky96.6
sky96/source/mupen64plus-ui-console/projects/unix/: Makefile
sky96/source/mupen64plus-ui-console/src/: main.c
